# YSDesignPattern

./: .gitmodules  AbstractFactory.hpp  CMakeLists.txt  README.md  Singletone.hpp  ysSingleton.hpp
Creational_Pattern/: AbstractFactory.cpp
inc/: ysAbstractFactory.hpp  ysSingleton.hpp
test/: CMakeLists.txt  main.cpp
